<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <Button
        android:id="@+id/data_create_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_data"/>

    <EditText
        android:id="@+id/num_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/car_num"/>
    <EditText
        android:id="@+id/pw_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/car_pw"/>
    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_add"/>
    <EditText
        android:id="@+id/key_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/car_hint_query"
        />

    <Button
        android:id="@+id/query_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_query"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/car_num"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/car_pw"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/bike_rcv"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <Button
        android:id="@+id/clear_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_clear"/>


</LinearLayout>